Kleines Fun Project

--- a/index.html
+++ b/index.html
@@ -38,25 +38,28 @@
       left: 40%;
       top: 70%;
     }
+    
     #no {
       background: #f44336;
       color: white;
       left: 55%;
       top: 70%;
     }
+
   </style>
 </head>
 <body>
-  <!-- Dein lokales GIF -->
+  
   <img src="Bubu&Dudu.gif" alt="Bubu & Dudu">
 
-  <!-- Text -->
+
   <h1>Willst du meine Frau sein?</h1>
 
-  <!-- Buttons -->
+  
   <div class="buttons">
     <button id="yes">Ja</button>
     <button id="no">Nein</button>
+    <!-- <button id="maybe">Vielleicht</button> -->
   </div>
 
   <script>
